# dwf_prepipe

./: LICENSE.txt  README.md  antlia  compress.err  dwf_prepipe_JULY9.py  dwf_prepipe_no_res.py  dwf_prepipe_processccd.py  dwf_prepipe_processccd2.py  dwf_prepipe_processccd_SARA.py  dwf_prepipe_push.py  dwf_prepipe_reproccess.py  dwf_prepipe_res.py  loop_untared_2.py  masks  missfits.xml  prepipe.py  pyproject.toml  setup.py  utils.py
.github/workflows/: lint.yml
TO_DELETE/: compress.outerror=compress.err  contributors.txt  dwf_prepipe.py  dwf_prepipe_SARA.py  test_igor.py
additional_scripts/: dwf_prepipe_noaoraw.py  submit_unpacked.py
config/: scamp.conf  scamp.conf2~  scamp.conf~
dwfprepipe/: __init__.py  dwf_prepipe_reproccess.py  prepipe.py  push.py  utils.py
dwfprepipe/data/: sbatch_template.txt
dwfprepipe/data/config/: #scamp.conf#  missfits.conf  scamp.conf  scamp.sex  scamp.xml
obsolete/: dwf_prepipe_copycals.py  dwf_prepipe_res.py
tests/: test_prepipe.py  test_push.py
